Added new shades of blue and green;  nearly done.

--- a/index.html
+++ b/index.html
@@ -361,8 +361,10 @@
     <script src="bootstrap/js/bootstrap.js"></script>
     <script>
     <!--
-    var COLORS = ["blue","green","yellow","orange","black","purple","red"];
-    var ICONS = ["white","white","black","white","white","white","white"];
+    var COLORS = ["blue1", "blue2", "blue3", "green1", "green2", "green3",
+      "yellow", "orange", "black", "purple", "red"];
+    var ICONS = ["white", "white", "white", "white", "white", "white",
+      "black", "white", "white", "white", "white"];
 
     function showPublications() {
       $("#publications").show();
