--- a/index.html
+++ b/index.html
@@ -33,16 +33,16 @@
       <section id="tiles">
       <div class="row-fluid">
         <div class="span2 no-border no-margin no-padding">
-          <div class="span12 was-blue tile" style="margin-left:2px;padding-bottom:14px;">
+          <div class="span12 blue1 tile" style="margin-left:2px;padding-bottom:14px;">
             <h3>cfedermann</h3>
 
-            <p><i class="icon-hand-right icon-white"></i> Campus D7 <small>2</small><br/><i class="icon-home icon-white"></i> Room 2.04</p>
+            <p><i class="icon-hand-right icon-white"></i> Campus C7 <small>2</small><br/><i class="icon-home icon-white"></i> Room 2.04</p>
           </div>
 
           <div class="span12 no-margin"><img src="images/gravatar.png" width="130" alt="Photo" /></div>
         </div>
 
-        <div class="span6 was-green tile" style="min-height:160px;">
+        <div class="span6 blue2 tile" style="min-height:160px;">
           <p class="lead">I am a research fellow at the <a href="http://www.coli.uni-saarland.de/groups/MP/page.php?id=index">Computational Linguistics Group</a> at <a href="http://www.uni-saarland.de/">Saarland University</a>.</p>
 
           <p>I have studied <a href="http://www.cs.uni-saarland.de/">computer science</a> and <a href="http://www.coli.uni-saarland.de/">computational linguistics</a> at Saarland University and submitted my diploma thesis in July 2007.</p>
@@ -53,13 +53,13 @@
         </div>
 
         <div class="span3 no-border no-margin no-padding">
-          <div class="span12 was-yellow tile">
+          <div class="span12 blue3 tile">
             <h3>Teaching</h3>
 
             <p>In summer 2013, I co-teach the M.Sc. <span style="display:inline-block"><i class="icon-book icon-black"></i> <a href="#">Language Technology II</a></span> course together with <span style="display:inline-block"><i class="icon-user icon-black"></i> <a href="http://www.stanford.edu/~mjkay/">Martin Kay</a></span> and <span style="display:inline-block;"><i class="icon-user icon-black"></i> <a href="http://www.coli.uni-saarland.de/~magda/">Magdalena Wolska</a></span>.</p>
           </div>
 
-          <div class="span12 was-orange tile" style="margin-left:0px;margin-top:9px;">
+          <div class="span12 orange tile" style="margin-left:0px;margin-top:9px;" id="next-meeting">
             <p><i class="icon-calendar icon-white"></i> Next meeting: April 16, 2013<br/><i class="icon-info-sign icon-white"></i> Campus C7 <small>4</small> &mdash; Room 1.17<br/>  Part of the <a href="http://www.coli.uni-saarland.de/kvv/detailpage.php?id=1968">semester introductory meeting</a> starting at 12:00 PM.</p>
           </div>
         </div>
@@ -75,19 +75,19 @@
       </div><!-- <div class="row-fluid"> -->
 
       <div class="row-fluid">
-        <div class="span4 was-black tile" style="min-height:160px;">
+        <div class="span4 green1 tile" style="min-height:160px;">
           <h3>39 Publications</h3>
 
           <p>See my publications/citations on <span style="display:inline-block"><i class="icon-search icon-white"></i> <a href="http://scholar.google.com/citations?hl=en&amp;user=FIkUVv4AAAAJ">Google Scholar</a></span>. A list of all publications is available for download in <span style="display:inline-block"><i class="icon-download icon-white"></i> <a href="bibliography.bib">BibTex format</a></span>. You can view a table with all publications by <a href="javascript:showPublications();">clicking here</a>.</p>
         </div>
 
-        <div class="span3 was-purple tile" style="min-height:160px;">
+        <div class="span3 green2 tile" style="min-height:160px;">
           <h3>CV</h3>
 
           <p>My Curriculum Vitae is <a href="mailto:cfedermann@gmail.com">available on request</a> as PDF or DOC.</p>
         </div>
 
-        <div class="span4 was-red tile" style="min-height:160px;">
+        <div class="span4 green3 tile" style="min-height:160px;">
           <h3>Contact Details</h3>
 
           <address>
@@ -361,12 +361,11 @@
     <script src="bootstrap/js/bootstrap.js"></script>
     <script>
     <!--
+    var RANDOMISE_ALL_TILES = false;
     var COLORS = ["blue1", "blue2", "blue3", "green1", "green2", "green3",
-      "orange", "red", "purple"];
-//      "yellow", "orange", "black", "purple", "red"];
+      "yellow", "orange", "red", "purple", "black"];
     var ICONS = ["white", "white", "white", "white", "white", "white",
-      "white", "white", "purple"];
-//      "black", "white", "white", "white", "white"];
+      "black", "white", "white", "white", "white"];
 
     function showPublications() {
       $("#publications").show();
@@ -376,7 +375,7 @@
       $("section#about .alert").alert('close');
     }
 
-    function setTileColor(tile, colorIndex) {
+    function setTileColor(tile, colorIndex, COLORS) {
       tile.addClass(COLORS[colorIndex]);
       tile.find("i[class^='icon-']").each(function(index) {
         if (ICONS[colorIndex] == 'white') {
@@ -397,14 +396,24 @@
         closeAlert();
       });
 
-      // Randomise tile colors and fix icon colors.
-      var tiles = $("#tiles .tile");
+      // TODO: only randomise colors for tiles: cfedermann, next-meeting, CV.
 
-      var startIndex = Math.floor(Math.random() * COLORS.length);
-      tiles.each(function(index) {
-        colorIndex = (startIndex+index) % COLORS.length;
-        setTileColor($(this), colorIndex);
-      });
+      // Randomise tile colors and fix icon colors.
+      if (RANDOMISE_ALL_TILES) {
+
+        var tiles = $("#tiles .tile");
+
+        var startIndex = Math.floor(Math.random() * COLORS.length);
+        tiles.each(function(index) {
+          var colorIndex = (startIndex+index) % COLORS.length;
+          setTileColor($(this), colorIndex);
+        });
+      }
+      else {
+        var COLORS = ["yellow", "orange", "red", "purple", "black"];
+        var colorIndex = Math.floor(Math.random() * COLORS.length);
+        setTileColor($("#next-meeting"), colorIndex, COLORS);
+      }
     });
 
     //-->
