--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="utf-8">
-    <title>Christian Federmann — Research Fellow, Saarland University</title>
+    <title>Christian Federmann — Research Associate, Saarland University</title>
     <meta name="description" content="Personal website">
     <meta name="author" content="Christian Federmann">
 
@@ -22,11 +22,11 @@
       <section id="about" style="padding-top: 60px;">
       <div class="alert alert-info" style="display:none;">
         <button type="button" class="close">&times;</button>
-        <strong>Please note:</strong> new phone number +49 681 302 4680, new office coordinates Campus C7 <small>2</small> &mdash; Room 2.04.
+        <strong>Please note:</strong> new phone number +49 681 302 4680, new office coordinates Campus C7 <small>2</small> &mdash; Room 1.02.
       </div>
 
       <div class="page-header">
-        <h1>Christian Federmann <small>Research Fellow, Saarland University</small></h1>
+        <h1>Christian Federmann <small>Research Associate, Saarland University</small></h1>
       </div>
       </section>
 
@@ -36,18 +36,18 @@
           <div class="span12 blue1 tile" style="margin-left:2px;padding-bottom:14px;">
             <h3>cfedermann</h3>
 
-            <p><i class="icon-flag icon-white"></i> Campus C7 <small>2</small><br/><i class="icon-home icon-white"></i> Room 2.04</p>
+            <p><i class="icon-flag icon-white"></i> Campus C7 <small>2</small><br/><i class="icon-home icon-white"></i> Room 1.02</p>
           </div>
 
           <div class="span12 no-margin"><img src="images/gravatar.png" width="130" alt="Photo" /></div>
         </div>
 
         <div class="span6 blue2 tile" style="min-height:160px;">
-          <p class="lead">I am a research fellow at the <a href="http://www.coli.uni-saarland.de/groups/MP/page.php?id=index">Computational Linguistics Group</a> at <a href="http://www.uni-saarland.de/">Saarland University</a>.</p>
+          <p class="lead">I am a research associate at the <a href="http://www.coli.uni-saarland.de/groups/MP/page.php?id=index">Computational Linguistics Group</a> at <a href="http://www.uni-saarland.de/">Saarland University</a>.</p>
 
           <p>I have studied <a href="http://www.cs.uni-saarland.de/">computer science</a> and <a href="http://www.coli.uni-saarland.de/">computational linguistics</a> at Saarland University and submitted my diploma thesis in July 2007.</p>
 
-          <p>From July 2007&mdash;April 2013, I worked as a researcher at the <a href="http://www.dfki.de/lt/">Language Technology Lab</a> at <abbr title="German Research Center for Artificial Intelligence">DFKI</abbr>. My research mostly focused on machine translation and evaluation of machine-translated text, as well as building clever information extraction tools.</p>
+          <p>From August 2007&mdash;April 2013, I worked as a researcher at the <a href="http://www.dfki.de/lt/">Language Technology Lab</a> at <abbr title="German Research Center for Artificial Intelligence">DFKI</abbr>. My research mostly focused on machine translation and evaluation of machine-translated text, as well as building clever information extraction tools.</p>
 
           <p>My PhD project under the supervision of <span style="display:inline-block"><i class="icon-user icon-white"></i> <a href="http://www.coli.uni-saarland.de/~hansu/">Prof. Dr. Hans Uszkoreit</a></span> is titled &laquo;A Machine Learning Framework  for System Combination Using Joint, Binarised Feature Vectors&raquo; and slated to be submitted in mid-2013.</p>
         </div>
