Fixed minor glitch.

--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
 
           <p>I have studied <a href="http://www.cs.uni-saarland.de/">computer science</a> and <a href="http://www.coli.uni-saarland.de/">computational linguistics</a> at Saarland University and submitted my diploma thesis in July 2007.</p>
 
-          <p>From August 2007&mdash;April 2013, I worked as a researcher at the <a href="http://www.dfki.de/lt/">Language Technology Lab</a> at <abbr title="German Research Center for Artificial Intelligence">DFKI</abbr>. My research mostly focused on machine translation and evaluation of machine-translated text, as well as building clever information extraction tools.</p>
+          <p>From August 2007&mdash;April 2013, I was a researcher at the <a href="http://www.dfki.de/lt/">Language Technology Lab</a> at <abbr title="German Research Center for Artificial Intelligence">DFKI</abbr>. My research mostly focused on machine translation and evaluation of machine-translated text, as well as building clever information extraction tools.</p>
 
           <p>My PhD project under the supervision of <span style="display:inline-block"><i class="icon-user icon-white"></i> <a href="http://www.coli.uni-saarland.de/~hansu/">Prof. Dr. Hans Uszkoreit</a></span> is titled &laquo;A Machine Learning Framework  for System Combination Using Joint, Binarised Feature Vectors&raquo; and slated to be submitted in mid-2013.</p>
         </div>
@@ -84,7 +84,7 @@
         <div class="span3 green2 tile" style="min-height:160px;">
           <h3>CV</h3>
 
-          <p>My Curriculum Vitae is available as PDF or DOC <span style="display:inline-block"><i class="icon-envelope icon-white"></i> <a href="mailto:cfedermann@gmail.com">on request</a></span>. You can also <span style="display:inline-block"><i class="icon-plus-sign icon-white"></i> <a href="http://de.linkedin.com/in/cfedermann/">connect on LinkedIn</a></span>.</p>
+          <p>My Curriculum Vitae is available as PDF or DOC <span style="display:inline-block"><i class="icon-envelope icon-white"></i> <a href="mailto:cfedermann@coli.uni-saarland.de">on request</a></span>. You can also <span style="display:inline-block"><i class="icon-plus-sign icon-white"></i> <a href="http://de.linkedin.com/in/cfedermann/">connect on LinkedIn</a></span>.</p>
         </div>
 
         <div class="span4 green3 tile" style="min-height:160px;">
