Updated next meeting tile.

--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
           </div>
 
           <div class="span12 orange tile" style="margin-left:0px;margin-top:9px;" id="next-meeting">
-            <p><i class="icon-calendar icon-white"></i> Next meeting: April 16, 2013<br/><i class="icon-info-sign icon-white"></i> Campus C7 <small>4</small> &mdash; Room 1.17<br/>  Part of the <a href="http://www.coli.uni-saarland.de/kvv/detailpage.php?id=1968">semester introductory meeting</a> starting at 12:00 PM.</p>
+            <p><i class="icon-calendar icon-white"></i> Next meeting: April 23, 2013<br/><i class="icon-info-sign icon-white"></i> Campus C7 <small>2</small> &mdash; Seminarraum<br/> Lecture from 08:30&mdash;10:00 AM, presented by Martin Kay.</p>
           </div>
         </div>
       </div><!-- <div class="row-fluid"> -->
