--- a/index.html
+++ b/index.html
@@ -111,7 +111,7 @@
                 <tr>
                   <td>39</td>
                   <td>
-                    <p>A Feedback-enabled Machine Learning Approach for Multi-Engine Machine Translation <span class="label  label-important">Accepted for publication</span><br/><strong><small>Christian Federmann</small></strong><br/><small>Proceedings of the AAAI 2013 Spring Symposium on Lifelong Machine Learning, March 2013</small></p>
+                    <p>A Feedback-enabled Machine Learning Approach for Multi-Engine Machine Translation<br/><strong><small>Christian Federmann</small></strong><br/><small>Proceedings of the AAAI 2013 Spring Symposium on Lifelong Machine Learning, Stanford, CA, USA, March 2013</small></p>
                   </td>
                 </tr>
                 <tr>
