Updated next event box.

--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
           </div>
 
           <div class="span12 orange tile" style="margin-left:0px;margin-top:9px;" id="next-meeting">
-            <p><i class="icon-calendar icon-white"></i> Next meeting: TBA<br/><i class="icon-info-sign icon-white"></i> Campus C7 <small>2</small> &mdash; Seminarraum<br/>Q&amp;A session from 08:30&mdash;10:00 AM, presented by myself.</p>
+            <p><i class="icon-calendar icon-white"></i> Next event: <a href="http://esslli2013.de/">ESSLII 2013</a><br/><i class="icon-info-sign icon-white"></i> Düsseldorf, Germany<br/>25th European Summer School in Logic, Language and Information.</p>
           </div>
         </div>
       </div><!-- <div class="row-fluid"> -->
