Updated bibliography with WMT13 overview paper :)

--- a/index.html
+++ b/index.html
@@ -109,6 +109,12 @@
               </thead>
               <tbody>
                 <tr>
+                  <td>40</td>
+                  <td>
+                    <p>Findings of the 2013 Workshop on Statistical Machine Translation <span class="label  label-important">To appear</span><br/><strong><small>Ond\vrej Bojar, Christian Buck, Chris Callison-Burch, Christian Federmann, Barry Haddow, Philipp Koehn, Christof Monz, Matt Post, Radu Soricut, Lucia Specia</small></strong><br/><small>Proceedings of the Eighth Workshop on Statistical Machine Translation, August 2013</small></p>
+                  </td>
+                </tr>
+                <tr>
                   <td>39</td>
                   <td>
                     <p>A Feedback-enabled Machine Learning Approach for Multi-Engine Machine Translation<br/><strong><small>Christian Federmann</small></strong><br/><small>Proceedings of the AAAI 2013 Spring Symposium on Lifelong Machine Learning, Stanford, CA, USA, March 2013</small></p>
