--- a/index.html
+++ b/index.html
@@ -111,7 +111,7 @@
                 <tr>
                   <td>40</td>
                   <td>
-                    <p>Findings of the 2013 Workshop on Statistical Machine Translation <span class="label  label-important">To appear</span><br/><strong><small>Ond\vrej Bojar, Christian Buck, Chris Callison-Burch, Christian Federmann, Barry Haddow, Philipp Koehn, Christof Monz, Matt Post, Radu Soricut, Lucia Specia</small></strong><br/><small>Proceedings of the Eighth Workshop on Statistical Machine Translation, August 2013</small></p>
+                    <p>Findings of the 2013 Workshop on Statistical Machine Translation <span class="label  label-important">To appear</span><br/><strong><small>Ond&rcaron;ej Bojar, Christian Buck, Chris Callison-Burch, Christian Federmann, Barry Haddow, Philipp Koehn, Christof Monz, Matt Post, Radu Soricut, Lucia Specia</small></strong><br/><small>Proceedings of the Eighth Workshop on Statistical Machine Translation, August 2013</small></p>
                   </td>
                 </tr>
                 <tr>
