Updated avatar image.

--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
             <p><i class="icon-flag icon-white"></i> Campus C7 <small>2</small><br/><i class="icon-home icon-white"></i> Room 1.02</p>
           </div>
 
-          <div class="span12 no-margin"><img src="images/gravatar.png" width="130" alt="Photo" /></div>
+          <div class="span12 no-margin"><img src="images/avatar.png" width="130" alt="Photo" /></div>
         </div>
 
         <div class="span6 blue2 tile" style="min-height:160px;">
