--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="utf-8">
-    <title>Christian Federmann — Research Associate, Saarland University</title>
+    <title>Christian Federmann — Senior Program Manager, Microsoft</title>
     <meta name="description" content="Personal website">
     <meta name="author" content="Christian Federmann">
 
@@ -26,7 +26,7 @@
       </div>
 
       <div class="page-header">
-        <h1>Christian Federmann <small>Research Associate, Saarland University</small></h1>
+        <h1>Christian Federmann <small>Senior Program Manager, Microsoft</small></h1>
       </div>
       </section>
 
@@ -34,33 +34,34 @@
       <div class="row-fluid">
         <div class="span2 no-border no-margin no-padding">
           <div class="span12 blue1 tile" style="margin-left:2px;padding-bottom:14px;">
-            <h3>cfedermann</h3>
+            <h3>chrife</h3>
 
-            <p><i class="icon-flag icon-white"></i> Campus C7 <small>2</small><br/><i class="icon-home icon-white"></i> Room 1.02</p>
+            <p><i class="icon-flag icon-white"></i> Microsoft Canada Development Centre<br/><i class="icon-home icon-white"></i> 840 Cambie Street<br/>Suite 300, Vancouver</p>
           </div>
 
           <div class="span12 no-margin"><img src="images/avatar.png" width="130" alt="Photo" /></div>
         </div>
 
         <div class="span6 blue2 tile" style="min-height:160px;">
-          <p class="lead">I am a research associate at the <a href="http://www.coli.uni-saarland.de/groups/MP/page.php?id=index">Computational Linguistics Group</a> at <a href="http://www.uni-saarland.de/">Saarland University</a>.</p>
+          <p class="lead">I am Senior Program Manager at Microsoft Research working with the Microsoft Translator team.</p>
 
           <p>I have studied <a href="http://www.cs.uni-saarland.de/">computer science</a> and <a href="http://www.coli.uni-saarland.de/">computational linguistics</a> at Saarland University and submitted my diploma thesis in July 2007.</p>
 
-          <p>From August 2007&mdash;April 2013, I was a researcher at the <a href="http://www.dfki.de/lt/">Language Technology Lab</a> at <abbr title="German Research Center for Artificial Intelligence">DFKI</abbr>. My research mostly focused on machine translation and evaluation of machine-translated text, as well as building clever information extraction tools.</p>
+          <p>From August 2007&mdash;April 2013, I was a researcher at the <a href="http://www.dfki.de/lt/">Language Technology Lab</a> at <abbr title="German Research Center for Artificial Intelligence">DFKI</abbr>. My research mostly focused on machine translation and evaluation of machine-translated text, as well as building clever information extraction tools. From May 2013&mdash;October 2013, I was a research associate at the <a href="http://www.coli.uni-saarland.de/groups/MP/page.php?id=index">Computational Linguistics Group</a> at <a href="http://www.uni-saarland.de/">Saarland University</a>.</p>
 
-          <p>My PhD project under the supervision of <span style="display:inline-block"><i class="icon-user icon-white"></i> <a href="http://www.coli.uni-saarland.de/~hansu/">Prof. Dr. Hans Uszkoreit</a></span> is titled &laquo;A Machine Learning Framework  for System Combination Using Joint, Binarised Feature Vectors&raquo; and slated to be submitted in mid-2013.</p>
+          <p>My PhD project under the supervision of <span style="display:inline-block"><i class="icon-user icon-white"></i> <a href="http://www.coli.uni-saarland.de/~hansu/">Prof. Dr. Hans Uszkoreit</a></span> is titled &laquo;Hybrid Machine Translation using Binary Classification Models trained on Joint, Binarised Feature Vectors&raquo; and slated to be defended in December 2013.</p>
         </div>
 
         <div class="span3 no-border no-margin no-padding">
           <div class="span12 blue3 tile">
             <h3>Teaching</h3>
 
-            <p>In summer 2013, I co-teach the M.Sc. <span style="display:inline-block"><i class="icon-book icon-white"></i> <a href="http://www.coli.uni-saarland.de/courses/late2-13/">Language Technology II</a></span> course together with <span style="display:inline-block"><i class="icon-user icon-white"></i> <a href="http://www.stanford.edu/~mjkay/">Martin Kay</a></span> and <span style="display:inline-block;"><i class="icon-user icon-white"></i> <a href="http://www.coli.uni-saarland.de/~magda/">Magdalena Wolska</a></span>.</p>
+            <p>In summer 2013, I co-taught the M.Sc. <span style="display:inline-block"><i class="icon-book icon-white"></i> <a href="http://www.coli.uni-saarland.de/courses/late2-13/">Language Technology II</a></span> course together with <span style="display:inline-block"><i class="icon-user icon-white"></i> <a href="http://www.stanford.edu/~mjkay/">Martin Kay</a></span> and <span style="display:inline-block;"><i class="icon-user icon-white"></i> <a href="http://www.coli.uni-saarland.de/~magda/">Magdalena Wolska</a></span>.</p>
           </div>
 
           <div class="span12 orange tile" style="margin-left:0px;margin-top:9px;" id="next-meeting">
-            <p><i class="icon-calendar icon-white"></i> Next event: <a href="http://esslli2013.de/">ESSLII 2013</a><br/><i class="icon-info-sign icon-white"></i> Düsseldorf, Germany<br/>25th European Summer School in Logic, Language and Information.</p>
+            <h3>PhD Defense</h3>
+            <p><i class="icon-calendar icon-white"></i> Date: December 16, 2013 &mdash; TBC<br/><i class="icon-info-sign icon-white"></i> Location: Saarbr&uuml;cken, Germany<br/>Building C7 <small>4</small> &mdash; Large Hall</p>
           </div>
         </div>
       </div><!-- <div class="row-fluid"> -->
@@ -91,9 +92,9 @@
           <h3>Contact Details</h3>
 
           <address>
-            <i class="icon-envelope icon-white"></i> <a href="mailto:cfedermann@coli.uni-saarland.de">cfedermann [at] coli [dot] uni-saarland [dot] de</a><br/>
-            <i class="icon-bell icon-white"></i> +49 681 302 4680 &mdash;
-            <i class="icon-print icon-white"></i> +49 681 302 4351<br/>
+            <i class="icon-envelope icon-white"></i> <a href="mailto:chrife@microsoft.com">chrife [at] microsoft [dot] com</a><br/>
+            <i class="icon-bell icon-white"></i> +1-604-697-2000 &mdash;
+            <i class="icon-print icon-white"></i> TBD<br/>
             <i class="icon-comment icon-white"></i> office hour upon agreement
           </address>
         </div>
@@ -111,7 +112,7 @@
                 <tr>
                   <td>40</td>
                   <td>
-                    <p>Findings of the 2013 Workshop on Statistical Machine Translation <span class="label  label-important">To appear</span><br/><strong><small>Ond&rcaron;ej Bojar, Christian Buck, Chris Callison-Burch, Christian Federmann, Barry Haddow, Philipp Koehn, Christof Monz, Matt Post, Radu Soricut, Lucia Specia</small></strong><br/><small>Proceedings of the Eighth Workshop on Statistical Machine Translation, August 2013</small></p>
+                    <p>Findings of the 2013 Workshop on Statistical Machine Translation<br/><strong><small>Ond&rcaron;ej Bojar, Christian Buck, Chris Callison-Burch, Christian Federmann, Barry Haddow, Philipp Koehn, Christof Monz, Matt Post, Radu Soricut, Lucia Specia</small></strong><br/><small>Proceedings of the Eighth Workshop on Statistical Machine Translation, August 2013</small></p>
                   </td>
                 </tr>
                 <tr>
