--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="utf-8">
-    <title>Christian Federmann — Senior Program Manager, Microsoft</title>
+    <title>Christian Federmann — Program Manager II, Microsoft</title>
     <meta name="description" content="Personal website">
     <meta name="author" content="Christian Federmann">
 
@@ -26,7 +26,7 @@
       </div>
 
       <div class="page-header">
-        <h1>Christian Federmann <small>Senior Program Manager, Microsoft</small></h1>
+        <h1>Christian Federmann <small>Program Manager II, Microsoft</small></h1>
       </div>
       </section>
 
@@ -43,7 +43,7 @@
         </div>
 
         <div class="span6 blue2 tile" style="min-height:160px;">
-          <p class="lead">I am Senior Program Manager at Microsoft Research working with the Microsoft Translator team.</p>
+          <p class="lead">I am Program Manager II at Microsoft Research working with the Microsoft Translator team.</p>
 
           <p>I have studied <a href="http://www.cs.uni-saarland.de/">computer science</a> and <a href="http://www.coli.uni-saarland.de/">computational linguistics</a> at Saarland University and submitted my diploma thesis in July 2007.</p>
 
