--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
         </div>
 
         <div class="span6 blue2 tile" style="min-height:160px;">
-          <p class="lead">I am Program Manager II at Microsoft Research working with the Microsoft Translator team.</p>
+          <p class="lead">I am a Program Manager II at Microsoft Research working with the Microsoft Translator team.</p>
 
           <p>I have studied <a href="http://www.cs.uni-saarland.de/">computer science</a> and <a href="http://www.coli.uni-saarland.de/">computational linguistics</a> at Saarland University and submitted my diploma thesis in July 2007.</p>
 
