Updated defense details

--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
 
           <div class="span12 orange tile" style="margin-left:0px;margin-top:9px;" id="next-meeting">
             <h3>PhD Defense</h3>
-            <p><i class="icon-calendar icon-white"></i> Date: December 16, 2013 &mdash; TBC<br/><i class="icon-info-sign icon-white"></i> Location: Saarbr&uuml;cken, Germany<br/>Building C7 <small>4</small> &mdash; Large Hall</p>
+            <p><i class="icon-calendar icon-white"></i> Date: December 16, 2013 &mdash; 12:15p<br/><i class="icon-info-sign icon-white"></i> Location: Saarbr&uuml;cken, Germany<br/>Building C7 <small>4</small> &mdash; Conference room</p>
           </div>
         </div>
       </div><!-- <div class="row-fluid"> -->
