Update phone/fax numbers for MCDC

--- a/index.html
+++ b/index.html
@@ -93,8 +93,8 @@
 
           <address>
             <i class="icon-envelope icon-white"></i> <a href="mailto:chrife@microsoft.com">chrife [at] microsoft [dot] com</a><br/>
-            <i class="icon-bell icon-white"></i> +1-604-697-2000 &mdash;
-            <i class="icon-print icon-white"></i> TBD<br/>
+            <i class="icon-bell icon-white"></i> +1-604-693-7089 X7089 &mdash;
+            <i class="icon-print icon-white"></i> +1-604-682-0282<br/>
             <i class="icon-comment icon-white"></i> office hour upon agreement
           </address>
         </div>
