Updated PhD status

--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
 
           <p>From August 2007&mdash;April 2013, I was a researcher at the <a href="http://www.dfki.de/lt/">Language Technology Lab</a> at <abbr title="German Research Center for Artificial Intelligence">DFKI</abbr>. My research mostly focused on machine translation and evaluation of machine-translated text, as well as building clever information extraction tools. From May 2013&mdash;October 2013, I was a research associate at the <a href="http://www.coli.uni-saarland.de/groups/MP/page.php?id=index">Computational Linguistics Group</a> at <a href="http://www.uni-saarland.de/">Saarland University</a>.</p>
 
-          <p>My PhD project under the supervision of <span style="display:inline-block"><i class="icon-user icon-white"></i> <a href="http://www.coli.uni-saarland.de/~hansu/">Prof. Dr. Hans Uszkoreit</a></span> is titled &laquo;Hybrid Machine Translation using Binary Classification Models trained on Joint, Binarised Feature Vectors&raquo; and slated to be defended in December 2013.</p>
+          <p>My PhD project under the supervision of <span style="display:inline-block"><i class="icon-user icon-white"></i> <a href="http://www.coli.uni-saarland.de/~hansu/">Prof. Dr. Hans Uszkoreit</a></span> is titled &laquo;Hybrid Machine Translation using Binary Classification Models trained on Joint, Binarised Feature Vectors&raquo; and was defended on December 16, 2013.</p>
         </div>
 
         <div class="span3 no-border no-margin no-padding">
